# dc-miniapps

./: .env.example  BREEDING_ENHANCED_README.md  BUILD_WASM.md  DEPLOYMENT_GUIDE.md  ENGINE_README.md  FARCASTER_SETUP.md  FINAL_UPDATE.md  HOW_TO_PLAY.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  LOCAL_PLAY_GUIDE.md  LOCAL_SETUP.md  OPENSEA_INTEGRATION_GUIDE.md  PLAY_ASSETS_README.md  README.md  UPDATES.md  UPDATE_PAGE.txt  WASM_INTEGRATION_COMPLETE.md  WASM_README.md  build-wasm.ps1  build-wasm.sh  deployments-base-sepolia.json  hardhat.config.js  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
app/: globals.css  landscape.css  layout.tsx  page.tsx  providers.tsx
cache/: solidity-files-cache.json
components/: AttackAnimation.tsx  BattleArena.tsx  BattleArenaNew.tsx  BattleArenaWASM.tsx  BattleSimulation.tsx  BreedingLab.tsx  BreedingLabEnhanced.tsx  BreedingLabNew.tsx  BreedingLabWASM.tsx  ConnectWallet.tsx  DragonCard.tsx  DragonCollection.tsx  DragonMarketplaceV2.tsx  DragonTraining.tsx  DragonTrainingNew.tsx  DragonTrainingWASM.tsx  EggMarketplace.tsx  FoodFarm.tsx  GameBackgrounds.tsx  (+8 more)
engine/: CMakeLists.txt  README.md  build-direct.bat
engine/include/: blockchain.h  camera.h  chunk_terrain.h  combat.h  dragon.h  dragon_game.h  entity.h  player.h  player_2d.h  renderer.h  terrain.h  terrain_2d.h  village.h
engine/src/: blockchain.cpp  camera.cpp  chunk_terrain.cpp  combat.cpp  dragon.cpp  dragon_game.cpp  entity.cpp  main.cpp  player.cpp  player_2d.cpp  renderer.cpp  terrain.cpp  terrain_2d.cpp  village.cpp
(+81 files in other folders)
